2012-11-18  Junichi Satoh  <junichi@rworks.jp>

	* extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql: Removed duplicated
	query.

2012-11-14  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_modules.php,
	  pandoradb.sql,
	  pandoradb.postgreSQL.sql,
	  pandoradb.oracle.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	  godmode/agentes/agent_template.php,
	  godmode/agentes/module_manager.php,
	  godmode/agentes/agent_manager.php: Added support for server-side
	  module status calculation.

	* godmode/agentes/configurar_agente.php: Show 'None' when no server is
	  selected for an agent.

2012-11-13 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.php,
	godmode/reporting/reporting_builder.item_editor.php,
	include/functions_ui.php: fixed the javascript urls.

2012-11-13 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/db/mysql.php, include/functions_reporting.php,
	include/ajax/agent.php: cleaned source code style.
	
	* extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql, pandoradb.sql,
	pandoradb.postgreSQL.sql, pandoradb.oracle.sql: added the fields
	'id_agent', 'server_name' and 'show_modulegroup' in the table
	'tnetwork_map'.
	
	* include/functions_ui.php: fixed the function
	"ui_print_agent_autocomplete_input".
	
	* include/functions_networkmap.php: added function
	"networkmap_create_module_group_node".

2012-11-12 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_reporting.php: cleaned source code style.
	
	* include/functions_api.php: fixed typo error that stoped the
	execution of api.

2012-11-11  Junichi Satoh  <junichi@rworks.jp>

	* extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql: Fixed a typo.
	
2012-11-08  Sancho Lerena <slerena@artica.es>
