@@ -1,3 +1,8 @@
+2012-11-19  Junichi Satoh  <junichi@rworks.jp>
+
+	* godmode/agentes/planned_downtime.editor.php: Allowed to change
+	type of planned downtime while it's not active.
+
 2012-11-18  Junichi Satoh  <junichi@rworks.jp>
 
 	* extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql: Removed duplicated
